# DevConnect

./: posts.db  pyproject.toml  run_backend.py  run_frontend.py  users.db
client/: __init__.py
client/db/: __init__.py
client/db/models/: __init__.py  user.py  users.py
client/forms/: __init__.py  login.py  register.py
client/routes/: __init__.py  account.py  create.py  default.py  info.py  login.py  profile.py  subscribe.py
client/templates/: __base.html  create.html  edit_profile.html  form_template.html  index.html  info.html  profile.html  users.html
server/: __init__.py
server/db/: __init__.py
server/db/models/: post.py
server/routes/: __init__.py  post.py
server/schemas/: post.py
